<resources>
    <string name="app_name">Android Fitness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stepsActivity">STEPS</string>
    <string name="macronutrientsActivity">MACRONUTRIENTS</string>
    <string name="micronutrientsActivity">MICRONUTRIENTS</string>
    <string name="sleepActivity">SLEEP</string>

    <string name="get_location">Get Location</string>
    <string name="android_image">Android Image</string>
    <string name="textview_hint">Press the button to start tracking your
        location.
    </string>
    <string name="location_permission_denied">Location permissions denied,
        please enable the permissions to use this app.
    </string>
    <string name="address_text">"Name: %1$s \n Address: %2$s \n Timestamp: %3$tr"</string>
    <string name="no_location">No location available</string>
    <string name="no_address_found">No address found</string>
    <string name="loading">Loading…</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="start_tracking_location">Start tracking location</string>
    <string name="stop_tracking_location">Stop tracking location</string>
    <string name="no_place">No Place Name Found</string>
    <string name="pick_a_place">Pick a Place</string>
    <string name="enter_protein_g">Enter Protein (g)</string>
    <string name="enter_fat_g">Enter Fat (g)</string>
    <string name="enter_carbohydrates_g">Enter Carbohydrates (g)</string>
    <string name="enter_fibre_g">Enter Fibre (g)</string>
    <string name="enter_salt_g">Enter Salt (g)</string>
    <string name="add">ADD</string>
</resources>